Crash when adding any generative modifier on a curve with more than one material. #59925

Closed
opened 2018-12-28 14:39:53 +01:00 by Pablo Gentile · 4 comments

System Information
Operating system: Mac OS X 10.13.6
Graphics card:

Blender Version
Broken: 2.80, 0661bcba32 , 2018-12-28

Worked: (optional)

Short description of error
Blender crashes adding the Solidify modifier on beveled curves with more than one material (to make inverted hull outlines, for example).
@mont29 This is the new report I created. Thank you.

Exact steps for others to reproduce the error
In the default file:
add a curve,
assign 2 materials to it
assign the solidify modifier
It crashes.

If you assign the Solidify first, Blender crashes when you add a second material

In the attached file:
the Solidify is turned off on a curve with 2 materials.
If I turn it on Blender crashes.
If the curve already has 2 materials it crashes when I add the Solidify.
system-info.txt solidifiyCurveTest.blend

**System Information** Operating system: Mac OS X 10.13.6 Graphics card: **Blender Version** Broken: 2.80, 0661bcba3210 , 2018-12-28 Worked: (optional) **Short description of error** Blender crashes adding the Solidify modifier on beveled curves with more than one material (to make inverted hull outlines, for example). @mont29 This is the new report I created. Thank you. **Exact steps for others to reproduce the error** In the default file: add a curve, assign 2 materials to it assign the solidify modifier It crashes. If you assign the Solidify first, Blender crashes when you add a second material In the attached file: the Solidify is turned off on a curve with 2 materials. If I turn it on Blender crashes. If the curve already has 2 materials it crashes when I add the Solidify. [system-info.txt](https://archive.blender.org/developer/F6096971/system-info.txt) [solidifiyCurveTest.blend](https://archive.blender.org/developer/F6096977/solidifiyCurveTest.blend)
Author

Added subscribers: @mont29, @g3ntile

Added subscribers: @mont29, @g3ntile
Bastien Montagne changed title from Crash when adding Solidify modifier on beveled curves with more than one material to Crash when adding any generative modifier on a curve with more than one material. 2018-12-28 15:11:38 +01:00
Bastien Montagne self-assigned this 2018-12-28 15:12:13 +01:00

Thanks, confirmed. This affects any type of curve, with any kind of generative modifier, though.

Thanks, confirmed. This affects any type of curve, with any kind of generative modifier, though.

This issue was referenced by 4b2198a96a

This issue was referenced by 4b2198a96ac368fa5f2a353c7c148e015246cccf

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59925
No description provided.